--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 
 <body>
 	<noscript>You need to enable JavaScript to run this app.</noscript>
-	<div id="root"></div>
+	<div id="cleex"></div>
 </body>
 
 </html>
